@startuml

hide empty members

package "Dapla storage" {

  interface BinaryBackend {
    +read(path)
    +write(path)
    +list(path)
    +delete(path)
  }

  interface FormatConverter {
    +doesSupport(mime)
    +read(input, mime, schema)
    +write(records, output, mime, schema)
  }

  class StorageClient {
    -configuration
    +readData()
    +writeData()
    +readAndConvert()
    +writeAndConvert()
  }

  StorageClient *-- BinaryBackend
  StorageClient *-- FormatConverter

  CsvConverter -up-|> FormatConverter
  JsonConverter -up-|> FormatConverter
}

package "Dapla Hadoop" {
  class HadoopBackend
}

package "Dapla GCS" {
  class GoogleCloudStorageBackend
}

"Dapla Hadoop" --|> BinaryBackend
GoogleCloudStorageBackend --|> BinaryBackend

@enduml